--- a/src/app/view-profile/view-profile.component.css
+++ b/src/app/view-profile/view-profile.component.css
@@ -6,10 +6,14 @@
 }
 .profile{
     margin-top: 30px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border:1px solid #ccc;
     margin-left: 400px;
     margin-right: 400px;
     padding: 10px;
+}
+.profile:hover{
+    border:none;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .head{
     display: flex;
